# mcp-cockroachdb

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
examples/: cockroachdb_assistant.py
src/: main.py
src/common/: config.py  connection.py  server.py
src/tools/: cluster_management.py  cluster_monitoring.py  database_management.py  database_operations.py  query_engine.py  table_management.py
test/unit/: test_cluster_management.py
