[project]
name = "cockroachdb-mcp-server"
version = "0.1.0"
description = "CockroachDB MCP Server - Model Context Protocol server for CockroachDB"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Amine El Kouhen", email = "amine.elkouhen@cockroachlabs.com"}
]
keywords = ["CockroachDB", "MCP", "model-context-protocol", "AI", "LLM"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.9.4",
    "dotenv>=0.9.9",
    "click>=8.0.0",
    "asyncpg>=0.30.0",
    "smithery>=0.4.4",
]

[project.urls]
Homepage = "https://github.com/amineelkouhen/mcp-cockroachdb"
Repository = "https://github.com/amineelkouhen/mcp-cockroachdb"
Issues = "https://github.com/amineelkouhen/mcp-cockroachdb/issues"

[project.scripts]
cockroachdb-mcp-server = "src.main:cli"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]